Fix Gemini speech response template to return valid JSON
- Wrap base64 audio data in quotes to produce valid JSON string
- Fixes template processing error that caused corrupted audio output
- Resolves 'Response template did not produce valid JSON' warning

--- a/providers/gemini.toml
+++ b/providers/gemini.toml
@@ -127,5 +127,5 @@ request = """
 }
 """
 response = """
-{{ candidates[0].content.parts[0].inlineData.data }}
+"{{ candidates[0].content.parts[0].inlineData.data }}"
 """
