--- a/providers/vertex_llama.toml
+++ b/providers/vertex_llama.toml
@@ -9,6 +9,10 @@ auth_type = "google_sa_jwt"
 
 [cached_token]
 
+# change this directly
+# or do 
+# lc providers vars set vertex_google project your-actual-gcp-project-id
+# lc providers vars set location us-east5
 [vars]
-project = "${vertex_gcp_project_name}
-location = "us-east5"
+location = "your-actual-gcp-project-location" 
+project = "your-actual-gcp-project-id"
